[tool.poetry]
name = "jamboree"
version = "0.5.5"
description = "A multi-layer event sourcing and general data library"
authors = ["Kevin Hill <kah.kevin.hill@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "pandas"
pandas = "^1.0.3"
loguru = "^0.4.1"
pebble = "^4.5.1"
maya = "^0.6.1"
ujson = "^2.0.2"
gym = "^0.17.1"
lz4 = "^3.0.2"
cytoolz = "^0.10.1"
pytest = "^5.4.1"
funtime = "^0.4.7"
addict = "^2.2.1"
version_query = "^1.1.0"
redis = "3.3.11"
pandas_datareader = "^0.8.1"
dill = "^0.3.1"
json-tricks = "^3.14.0"
sklearn = "^0.0"
crayons = "^0.3.0"
skorch = "^0.7.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
creme = "^0.5.0"
jupyter = "^1.0.0"
cerberus = "^1.3.2"
hiredis = "^1.0.1"
eliot = "^1.12.0"
eliot-tree = "^19.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
